--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.7",
     "nanostores": "^1.0.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "three": "^0.180.0"
+  },
+  "devDependencies": {
+    "@types/three": "^0.180.0"
   }
 }
